---
source: spade-tests/src/typeinference.rs
---
entity main() -> uint<8> {
    ~None
}

error: Trait bound not satisfied. std::option::Option<core::marker::Data + core::marker::Copy> does not implement core::ops::BitNot
  ┌─ testinput:2:6
  │
2 │     ~None
  │     -^^^^ std::option::Option<core::marker::Data + core::marker::Copy> does not implement core::ops::BitNot
  │     │ 
  │     Required because of the trait bound specified here
